# Anomaly-Preservation-in-Synthetic-Time-Series

./: .gitignore  LICENSE  README.md  download_zenodo.sh  pyproject.toml  requirements.txt  validate_env.py
config/: base.yaml
config/datasets/: CATSv2.yaml  CreditCard.yaml  GHL.yaml  MITDB.yaml  OPPORTUNITY.yaml  PSM.yaml  SWaT.yaml
config/models/: DDPM.yaml  RTSGAN.yaml  TTSGAN.yaml  TimeVAE.yaml  TimeVAE_v2.yaml  TimeVAE_v3.yaml
scripts/: 01_preprocess_all.py  02_tune_model.py  03_train_final.py  04_generate_synthetic.py  05_train_detectors.py  06_evaluate_all.py  validate_env.py
src/: __init__.py
src/anomaly_detectors/: __init__.py  base.py  tadgan.py  wgan.py
src/data/: __init__.py  preprocessor.py
src/evaluation/: __init__.py  anomaly_preservation.py  fidelity.py  tsgm_scores.py  visualisation.py  window_loading.py
src/models/: __init__.py  _validation.py  base.py  csdi_wrapper.py  ddpm_wrapper.py  rtsgan_wrapper.py  timevae_v2_wrapper.py  timevae_v3_wrapper.py  timevae_wrapper.py  ttsgan_wrapper.py
src/models/rtsgan/: __init__.py  aegan.py  autoencoder.py  gan.py
src/models/ttsgan/: __init__.py  trainer.py  transformer.py
src/training/: __init__.py  train.py  tune.py  utils.py
src/utils/: __init__.py  logging.py  seeds.py  tensor.py
